Progrès sur la gestion des taches (ajout, suppression, modification)